Fixed comments section being too low in running regime page

--- a/src/regimes.css
+++ b/src/regimes.css
@@ -24,7 +24,6 @@
     right: 0;
     font-size: 24px;
     width: 100%;
-    min-height: 100vh;
 }
 .regime-main-body{
     height:100%;
